--- a/app/src/main/res/layout/fragment_qrscan.xml
+++ b/app/src/main/res/layout/fragment_qrscan.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".QRScanFromFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_invokeqrscan" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_fragment_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+</LinearLayout>
